@@ -1,17 +1,20 @@
 package backend.academy.linktracker.scrapper.repository.jpa.impl;
 
-import backend.academy.linktracker.scrapper.model.Link;
-import backend.academy.linktracker.scrapper.repository.ChatStorage;
+import backend.academy.linktracker.scrapper.model.SubscriptionLinkView;
 import backend.academy.linktracker.scrapper.repository.LinkStorage;
-import backend.academy.linktracker.scrapper.repository.TagStorage;
 import backend.academy.linktracker.scrapper.repository.jpa.JpaChatRepository;
 import backend.academy.linktracker.scrapper.repository.jpa.JpaLinkRepository;
+import backend.academy.linktracker.scrapper.repository.jpa.JpaSubscriptionRepository;
 import backend.academy.linktracker.scrapper.repository.jpa.JpaTagRepository;
 import backend.academy.linktracker.scrapper.repository.jpa.entity.ChatEntity;
 import backend.academy.linktracker.scrapper.repository.jpa.entity.LinkEntity;
+import backend.academy.linktracker.scrapper.repository.jpa.entity.SubscriptionEntity;
+import backend.academy.linktracker.scrapper.repository.jpa.entity.SubscriptionId;
 import backend.academy.linktracker.scrapper.repository.jpa.entity.TagEntity;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -25,134 +28,157 @@ import org.springframework.transaction.annotation.Transactional;
 @ConditionalOnProperty(name = "app.database.access-type", havingValue = "ORM")
 @Transactional
 public class JpaLinkStorage implements LinkStorage {
-    private final JpaLinkRepository linkRepository;
+
     private final JpaChatRepository chatRepository;
+    private final JpaLinkRepository linkRepository;
     private final JpaTagRepository tagRepository;
-    private final TagStorage tagStorage;
-    private final ChatStorage chatStorage;
+    private final JpaSubscriptionRepository subscriptionRepository;
 
     @Override
-    public Link save(long chatId, Link link) {
-        ChatEntity chat = chatRepository.findById(chatId).orElseGet(() -> {
-            chatStorage.save(chatId);
-            return chatRepository
-                    .findById(chatId)
-                    .orElseThrow(() -> new RuntimeException("Ошибка при создании чата: " + chatId));
-        });
-        LinkEntity linkEntity = linkRepository.findByUrl(link.getUrl()).orElseGet(() -> {
-            LinkEntity newEntity = LinkEntity.builder()
-                    .url(link.getUrl())
-                    .lastCheckTime(link.getLastCheckTime())
-                    .lastUpdateTime(link.getLastUpdateTime())
-                    .build();
-            return linkRepository.save(newEntity);
-        });
-        if (link.getTags() != null && !link.getTags().isEmpty()) {
-            for (String tagName : link.getTags()) {
-                Long tagId = tagStorage.findOrCreate(tagName);
-                TagEntity tag = tagRepository.getReferenceById(tagId);
-                linkEntity.getTags().add(tag);
-            }
+    public SubscriptionLinkView save(long chatId, SubscriptionLinkView link) {
+        ChatEntity chat = chatRepository
+                .findById(chatId)
+                .orElseThrow(() -> new IllegalArgumentException("Чат не найден: " + chatId));
+
+        LinkEntity linkEntity = linkRepository
+                .findByUrl(link.getUrl())
+                .orElseGet(() -> linkRepository.save(LinkEntity.builder()
+                        .url(link.getUrl())
+                        .lastCheckTime(safeTime(link.getLastCheckTime()))
+                        .lastUpdateTime(safeTime(link.getLastUpdateTime()))
+                        .build()));
+
+        SubscriptionId subscriptionId = new SubscriptionId(chatId, linkEntity.getId());
+
+        SubscriptionEntity subscription = subscriptionRepository
+                .findById(subscriptionId)
+                .orElseGet(() -> subscriptionRepository.save(SubscriptionEntity.builder()
+                        .id(subscriptionId)
+                        .chat(chat)
+                        .link(linkEntity)
+                        .build()));
+
+        List<String> normalizedTags = normalizeTags(link.getTags());
+        for (String tagName : normalizedTags) {
+            TagEntity tag = tagRepository
+                    .findByName(tagName)
+                    .orElseGet(() ->
+                            tagRepository.save(TagEntity.builder().name(tagName).build()));
+            subscription.addTag(tag);
         }
-        if (!linkEntity.getChats().contains(chat)) {
-            linkEntity.getChats().add(chat);
-            chat.getLinks().add(linkEntity);
-            linkRepository.save(linkEntity);
-        }
-        return toLink(linkEntity, chatId);
+
+        SubscriptionEntity saved = subscriptionRepository.save(subscription);
+        return toView(saved);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<Link> findByChatId(long chatId) {
-        Optional<ChatEntity> chatOpt = chatRepository.findById(chatId);
-        if (chatOpt.isEmpty()) {
-            return Collections.emptyList();
-        }
-        ChatEntity chat = chatOpt.orElseThrow(() -> new IllegalStateException("id чата не найдено"));
-        return chat.getLinks().stream().map(entity -> toLink(entity, chatId)).collect(Collectors.toList());
-    }
-
-    @Override
-    public List<Link> findByChatId(long chatId, String tag) {
-        List<LinkEntity> entities = linkRepository.findByChatIdAndOptionalTag(chatId, tag);
-        return entities.stream().map(entity -> toLink(entity, chatId)).collect(Collectors.toList());
+    public List<SubscriptionLinkView> findByChatId(long chatId) {
+        return subscriptionRepository.findByChat_Id(chatId).stream()
+                .map(this::toView)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public Optional<Link> findByChatIdAndUrl(long chatId, String url) {
-        return chatRepository.findById(chatId).flatMap(chat -> chat.getLinks().stream()
-                .filter(link -> link.getUrl().equals(url))
-                .findFirst()
-                .map(entity -> toLink(entity, chatId)));
+    public List<SubscriptionLinkView> findByChatId(long chatId, String tag) {
+        if (tag == null || tag.isBlank()) {
+            return findByChatId(chatId);
+        }
+
+        return subscriptionRepository.findByChatIdAndTag(chatId, tag).stream()
+                .map(this::toView)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<SubscriptionLinkView> findByChatIdAndUrl(long chatId, String url) {
+        return subscriptionRepository.findByChat_IdAndLink_Url(chatId, url).map(this::toView);
     }
 
     @Override
     public void delete(Long chatId, String url) {
-        ChatEntity chat = chatRepository.findById(chatId).orElse(null);
-        if (chat == null) return;
-        linkRepository.findByUrl(url).ifPresent(link -> {
-            if (link.getChats().contains(chat)) {
-                link.getChats().remove(chat);
-                chat.getLinks().remove(link);
-                linkRepository.save(link);
-                if (link.getChats().isEmpty()) {
-                    linkRepository.delete(link);
-                }
-            }
-        });
+        Optional<SubscriptionEntity> subscriptionOpt = subscriptionRepository.findByChat_IdAndLink_Url(chatId, url);
+        if (subscriptionOpt.isEmpty()) {
+            return;
+        }
+
+        SubscriptionEntity subscription = subscriptionOpt.get();
+        Long linkId = subscription.getLink().getId();
+
+        subscriptionRepository.delete(subscription);
+        subscriptionRepository.flush();
+
+        if (!subscriptionRepository.existsByLink_Id(linkId)) {
+            linkRepository.deleteById(linkId);
+        }
     }
 
     @Override
     public void deleteByChatId(Long chatId) {
-        ChatEntity chat = chatRepository.findById(chatId).orElse(null);
-        if (chat == null) return;
-        for (LinkEntity link : new ArrayList<>(chat.getLinks())) {
-            link.getChats().remove(chat);
-            if (link.getChats().isEmpty()) {
-                linkRepository.delete(link);
-            } else {
-                linkRepository.save(link);
+        List<SubscriptionEntity> subscriptions = subscriptionRepository.findByChat_Id(chatId);
+        List<Long> linkIds = subscriptions.stream()
+                .map(subscription -> subscription.getLink().getId())
+                .distinct()
+                .toList();
+
+        subscriptionRepository.deleteAll(subscriptions);
+        subscriptionRepository.flush();
+
+        for (Long linkId : linkIds) {
+            if (!subscriptionRepository.existsByLink_Id(linkId)) {
+                linkRepository.deleteById(linkId);
             }
         }
-        chat.getLinks().clear();
-        chatRepository.save(chat);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<Link> findAll() {
-        List<Link> allSubscriptions = new ArrayList<>();
-        for (ChatEntity chat : chatRepository.findAll()) {
-            for (LinkEntity link : chat.getLinks()) {
-                allSubscriptions.add(toLink(link, chat.getId()));
-            }
-        }
-        return allSubscriptions;
+    public List<SubscriptionLinkView> findAll() {
+        return subscriptionRepository.findAllWithGraph().stream()
+                .map(this::toView)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<Link> findAllByUrl(String url) {
-        return linkRepository
-                .findByUrl(url)
-                .map(link -> link.getChats().stream()
-                        .map(chat -> toLink(link, chat.getId()))
-                        .collect(Collectors.toList()))
-                .orElse(List.of());
+    public List<SubscriptionLinkView> findAllByUrl(String url) {
+        return subscriptionRepository.findByLink_Url(url).stream()
+                .map(this::toView)
+                .toList();
     }
 
-    private Link toLink(LinkEntity entity, Long chatId) {
-        List<String> tagNames =
-                entity.getTags().stream().map(TagEntity::getName).collect(Collectors.toList());
-        return Link.builder()
-                .id(entity.getId())
-                .chatId(chatId)
-                .url(entity.getUrl())
-                .tags(tagNames)
-                .lastCheckTime(entity.getLastCheckTime())
-                .lastUpdateTime(entity.getLastUpdateTime())
+    private SubscriptionLinkView toView(SubscriptionEntity subscription) {
+        List<String> tags = subscription.getSubscriptionTags().stream()
+                .map(subscriptionTag -> subscriptionTag.getTag().getName())
+                .distinct()
+                .sorted()
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        return SubscriptionLinkView.builder()
+                .id(subscription.getLink().getId())
+                .chatId(subscription.getChat().getId())
+                .url(subscription.getLink().getUrl())
+                .lastCheckTime(subscription.getLink().getLastCheckTime())
+                .lastUpdateTime(subscription.getLink().getLastUpdateTime())
+                .tags(tags)
                 .build();
+    }
+
+    private List<String> normalizeTags(List<String> tags) {
+        if (tags == null || tags.isEmpty()) {
+            return List.of();
+        }
+
+        return tags.stream()
+                .filter(java.util.Objects::nonNull)
+                .map(String::trim)
+                .filter(tag -> !tag.isBlank())
+                .collect(Collectors.collectingAndThen(Collectors.toCollection(LinkedHashSet::new), ArrayList::new));
+    }
+
+    private OffsetDateTime safeTime(OffsetDateTime value) {
+        return value != null ? value : OffsetDateTime.now(ZoneOffset.UTC);
     }
 }
